# horus-insurance-manager

./: .gitignore  CHANGELOG.md  biome.json  commitlint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
drizzle/: schema.ts
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  clients.rs  exports.rs  external.rs  mod.rs  paiements.rs  polices.rs  vehicules.rs  verification.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_integrations.sql
src/components/data-table/: DataTable.tsx
src/components/forms/: ClientForm.tsx  PaiementForm.tsx  PoliceForm.tsx  VehiculeForm.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/ui/: ConfirmDialog.tsx  (+2 more)
src/hooks/: useAssureurs.ts  useClients.ts  useDashboard.ts  useEcheances.ts  useIntegrations.ts  usePaiements.ts  usePolices.ts  useTheme.ts  useVehicules.ts
src/lib/: date-utils.ts  db.ts  export.ts  i18n.ts  ipc.ts  migrate.ts  prefill-search.ts  referentiel-marques.ts  tarification-bareme.ts  tarification.ts
src/routes/: index.tsx
src/schemas/: assureur.ts  client.ts  index.ts  paiement.ts  police.ts  vehicule.ts
tests/e2e/: appearance.spec.ts  dialogs.spec.ts  fixtures.ts  mock-tauri.ts  navigation.spec.ts
tests/unit/: date-utils.test.ts  schemas.test.ts  tarification.test.ts
(+8 files in other folders)
